Se creo el fragment login y su diseño

--- a/app/src/main/res/values/colors.xml
+++ b/app/src/main/res/values/colors.xml
@@ -1,6 +1,10 @@
 <?xml version="1.0" encoding="utf-8"?>
 <resources>
     <color name="black">#FF000000</color>
-    <color name="white">#D5CFCF</color>
+    <color name="white">#FFFFFF</color>
+
     <color name="splash">#4A4A4A</color>
+    <color name="login">#810723</color>
+    <color name="cardview">#FFFFFF</color>
+
 </resources>
