Se termino el proyedto con la list

--- a/app/src/main/res/values/colors.xml
+++ b/app/src/main/res/values/colors.xml
@@ -7,4 +7,7 @@
     <color name="login">#810723</color>
     <color name="cardview">#FFFFFF</color>
 
+    <color name="darkgrey">#323232</color>
+    <color name="grey">#878787</color>
+
 </resources>
